# embedding_translation

./: .cruft.json  .cursorrules  .gitignore  .ruff.toml  LICENSE.md  README.md  Taskfile.yml  pyproject.toml  pytest.ini
.devcontainer/: devcontainer.json
.github/workflows/: static.yml
adrianos-notes-and-workspace/: README.md  notes-to-self-2024-12-07.md  notes-to-self-2024-12-10.md  things-we-should-do.md
adrianos-notes-and-workspace/deprecated/: config.py  models.py
adrianos-notes-and-workspace/deprecated/config/: experiments.yaml
data/anal/: example_dump.json  test_visualize_embeddings.json
data/arguana_loss_logs/: arguana_loss_logs.json
data/cka_centered_natives/: info.json
data/cka_uncentered_natives/: info.json
data/dataset_infos/: 0.json  1.json  10.json  11.json  12.json  13.json  14.json  15.json  16.json  17.json  18.json  19.json  2.json  20.json  21.json  22.json  23.json  24.json  25.json  26.json  27.json  28.json  29.json  3.json  30.json  31.json  32.json  33.json  34.json  35.json  36.json  37.json  38.json  39.json  4.json  40.json  41.json  42.json  43.json  44.json  (+26 more)
data/dl_final_project_tables_tensors/all_mses_table_l2plus_no_ctrl/: info.json  table.safetensors
data/dl_final_project_tables_tensors/all_mses_table_l2plus_yes_ctrl/: info.json
data/dl_final_project_tables_tensors/cka_centered_natives/: info.json
data/dl_final_project_tables_tensors/cka_uncentered_natives/: table.safetensors
data/dl_final_project_tables_tensors/dl_final_project_temp_numbers/: validation_mses.json
data/dumps/: example_dump.json
data/embeddings/: mock_dataset_1.safetensors  mock_dataset_2.safetensors  mock_dataset_4.safetensors  stitched_test_embeddings.safetensors  stitched_train_embeddings.safetensors  target_embeddings.safetensors
data/figs/: iris_embeddings_combined.html  iris_embeddings_separate.html
data/figs/html/: cka_matrix_on_arguana.html  embedding_viz_stitch_instructor-xl_to_text-embedding-ada-002_one-layer.html  embedding_viz_stitch_text-embedding-ada-002_to_instructor-xl_one-layer.html  example_plot_combined.html  iris_embeddings.html  lol.html  mae_loss_viz_2_by_2.html  mae_matrix_onarguana.html  mse_matrix_onarguana.html  test_heatmap.html  test_visualize_embeddings.html
data/mock/embeddings/: mock_dataset_0.safetensors  mock_dataset_3.safetensors  single_tensor.safetensors  stitched_test_embeddings.safetensors  stitched_train_embeddings.safetensors  target_embeddings.safetensors
data/mock/stitch_summaries/: stitch_instructor-xl_to_text-embedding-ada-002_one-layer_02.json  stitch_text-embedding-ada-002_to_instructor-xl_one-layer_02.json  stitch_text-embedding-ada-002_to_instructor-xl_one-layer_03.json
data/stitch_summaries/: stitch_instructor-xl_to_text-embedding-ada-002_one-layer_01.json  stitch_instructor-xl_to_text-embedding-ada-002_one-layer_03.json  stitch_text-embedding-ada-002_to_instructor-xl_one-layer_01.json  stitch_text-embedding-ada-002_to_instructor-xl_one-layer_02.json
dl_final_project_tables_tensors/all_mses_table_l2plus_yes_ctrl/: table.safetensors
dl_final_project_tables_tensors/cka_centered_natives/: table.safetensors
dl_final_project_tables_tensors/cka_uncentered_natives/: info.json
dl_final_project_tables_tensors/dl_final_project_temp_numbers/: validation_mses.safetensors
docs/: contact.md
figures/: iris_embeddings_combined.html  iris_embeddings_separate.html
notebooks/: 0.01_gatlen_json-to-parquet.ipynb  0.01_gatlen_stitch-metrics-to-parquet.ipynb  0.02_gatlen_publish-model-to-hf.ipynb
owler_fork/: .env.example  .gitignore  README.md  deleteme_test.py  models.yaml  pyproject.toml  requirements.txt  wsgi.py
owler_fork/benchmarking_and_experiments/: README.md  benchmarking_embedding.py
owler_fork/owlergpt/: __init__.py
owler_fork/owlergpt/commands/: __init__.py  cereal.py  chunk_dataset.py  collect_stats.ipynb  create_openai_embeddings.py  create_regular_embeddings.py  dev_testing_ingestion.ipynb  download_datasets.py  evaluate_ds.py  fix_metadata.py  ingest_ds.py  model_sizes.py  move_collections.py  pokemon.ipynb  pokemon.py  quadracopter.ipynb  quadrocopter.py  quadrocopter_evolved.ipynb  quadrocopter_ultra.ipynb  sanity_check_embeddings_not_equal.ipynb  shrink_random_subset_of_dataset.py  speed_injest.py  split_train_test_ds.py  split_validation.py  train_linear_transforms_ds.py  train_on_safetensors_dbs.ipynb
owler_fork/owlergpt/modern/: README.md  __init__.py  collection_utils.py  ingestion.py  schemas.py  stitches.py
owler_fork/owlergpt/parallel_chungus/: README.md  child.py  parent.py
owler_fork/owlergpt/utils/: __init__.py  check_env.py  cli_helpers.py  dataset_folders.py  filter_collections.py  get_embedding_indices.py  json_loader.py  list_available_collections.py  metrics.py  plots.py
owler_fork/results_original/: README.md
owler_fork/schemas/: schemas.py
schemas/: schemas.py
scripts/: configure_gh_repo.sh  encryption.py
src/: DataVizPipeline.py  cka_stuff.ipynb  collection_utils.py  complexity_vs_mse_rank.ipynb  create_summaries_from_folder.py  embedding_translation.ipynb  main.py  plan.md  run_dataviz_pipeline.py
src/blog/: bibliography.bib  copy_html_here.py  index.html  index_original.html  styles.css
src/blog/example_distill/: example_distill.html
src/blog/figs/: cka_matrix_on_arguana.html  embedding_viz_stitch_instructor-xl_to_text-embedding-ada-002_one-layer.html  loss_viz_2_by_2.html  mae_loss_viz_2_by_2.html  (+5 more)
src/blog_template/: index.html
src/classes/: Embedding.py  EmbeddingTranslator.py
src/logic/: anal_dump.py  knn_labeling.py  load_embeddings.py  reduce_embedding_dims.py
src/proposal_tex/: preamble.tex  proposal.tex  references.bib
src/schema/: AggregateStatistics.py  LossSummary.py  SemanticSearch.py  SimilarityMatrix.py  schema.py  training_schemas.py
src/tex/: preamble.tex
src/utils/: general_setup.py  log_config.py  logging.py
src/viz/: dimensionality_reduction.py  owl_evaluate_ds.py  owl_metrics.py  owl_plots.py  plot_heatmap.py  save_figure.py  use_owl_metrics.py
tests/: test.example.py  test_dimensionality_reduction.py
(+182 files in other folders)
