[dependency-groups]
ai-apps = [
    "ell-ai>=0.0.15",          # AI application framework
    "langchain>=0.3.12",       # LLM application development framework
    "megaparse>=0.0.45",       # Advanced text parsing library
]
ai-train = [
    "datasets>=3.1.0",         # Dataset management for ML
    "einops>=0.8.0",          # Tensor operations made simple
    "jaxtyping>=0.2.36",      # Type hints for JAX arrays
    "pytorch-lightning>=2.4.0", # PyTorch training framework
    "safetensors>=0.4.5",     # Safe tensor serialization
    "scikit-learn>=1.6.0",    # Traditional ML algorithms
    "torch>=2.5.1",           # Deep learning framework
    "transformers>=4.47.0",   # Hugging Face transformer models
    "umap-learn>=0.5.7",      # Dimensionality reduction
]
cli = [
    "typer>=0.15.1",          # CLI builder with type hints
]
config = [
    "cookiecutter>=2.6.0",    # Project template engine
    "gin-config>=0.5.0",      # Dependency injection config
    "jinja2>=3.1.4",         # Template engine
]
data = [
    "dagster>=1.9.5",         # Data orchestration framework
    "networkx>=3.4.2",        # Graph operations library
    "numpy>=1.26.4",          # Numerical computing
    "orjson>=3.10.12",        # Fast JSON parser/serializer
    "polars>=1.17.0",        # Fast DataFrame library
    "tomli>=2.0.1",          # TOML parser
]
dev = [
    "bandit>=1.8.0", # Security linter
    "hypothesis>=6.122.3", # Property-based testing
    "pip>=24.3.1", # Package installer
    "pydoclint>=0.5.11", # Docstring linter
    "pyinstrument>=5.0.0", # Python profiler
    "pyprojectsort>=0.3.0", # pyproject.toml sorter
    "pyright>=1.1.390", # Static type checker
    "pytest-cases>=3.8.6", # Parametrized testing
    "pytest-cov>=6.0.0", # Code coverage for pytest
    "pytest-icdiff>=0.9", # Improved diff output
    "pytest-mock>=3.14.0", # Mocking for pytest
    "pytest-playwright>=0.6.2", # Browser testing
    "pytest-profiling>=1.8.1", # Test profiling
    "pytest-random-order>=1.1.1", # Randomized test order
    "pytest-shutil>=1.8.1", # File operation utilities
    "pytest-split>=0.10.0", # Parallel test execution
    "pytest-sugar>=1.0.0", # Pretty test output
    "pytest-timeout>=2.3.1", # Test timeouts
    "pytest>=8.3.4", # Testing framework
    "ruff>=0.8.3", # Fast Python linter
    "taplo>=0.9.3", # TOML toolkit
    "tox>=4.23.2", # Test automation
    "uv>=0.5.7", # Fast pip replacement
    "polyfactory>=2.18.1", # Make fake data from a model
    "faker>=33.1.0", # Make fake data from a variety of similar fields
]
dev-doc = [
    "mdformat>=0.7.19",       # Markdown formatter
    "mkdocs-material>=9.5.48", # Documentation theme
    "mkdocs>=1.6.1",         # Documentation generator
]
dev-nb = [
    "jupyter-book>=1.0.3",    # Jupyter notebook publishing
    "nbformat>=5.10.4",      # Notebook file format
    "nbqa>=1.9.1",           # Notebook code quality
    "testbook>=0.4.2",       # Notebook testing
]
misc = [
    "wrapt>=1.17.0",         # Decorator utilities
]
nb = [
    "chime>=0.7.0",          # Sound notifications
    "ipykernel>=6.29.5",     # IPython kernel
    "ipython>=7.34.0",       # Interactive Python shell
    "ipywidgets>=8.1.5",     # Jupyter widgets
    "jupyterlab>=4.3.3",     # Notebook IDE
]
web = [
    "beautifulsoup4>=4.12.3", # HTML parsing
    "fastapi>=0.115.6",      # Fast web framework
    "playwright>=1.49.1",    # Browser automation
    "requests>=2.32.3",      # HTTP client
    "uvicorn>=0.33.0",       # ASGI server
    "zrok>=0.4.42",          # Tunnel service
]

[project]
authors = [
    { email = "gculp@mit.edu", name = "Gatlen Culp" },
]
classifiers = [
    "Development Status :: 1 - Planning",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Private :: Do Not Upload"
]
dependencies = [
    "loguru-config>=0.1.0",   # Logging configuration
    "loguru>=0.7.3",         # Better logging
    "plotly>=5.24.1",        # Interactive plotting
    "pydantic>=2.10.3",      # Data validation
    "rich>=13.9.4",          # Rich terminal output
    "tokenize-rt",           # Python tokenizer
]
description = "A final project for MIT's Deep Learning class"
keywords = []
license = {file = "LICENSE.md", content-type = "text/markdown"}
readme = {file = "README.md", content-type = "text/markdown"}
name = "embedding-translation"
requires-python = ">=3.11,<3.13"
version = "0.1.0"

[project.urls]
Repository = "https://github.com/GatlenCulp/embedding_translation"

[tool.poetry.scripts]
embedding_tranlation = "src:main"

[tool.pydoclint]
allow-init-docstring = true
arg-type-hints-in-docstring = false
check-return-types = false
exclude = "\\.venv"
style = "google"

[tool.pyright]
include = [
    ".",
]
reportMissingTypeStubs = false
reportUnknownArgumentType = false
reportUnknownMemberType = false
reportUnknownParameterType = false
reportUnknownVariableType = false

[tool.pytest.ini_options]
addopts = "--show-capture=no\n--code-highlight=yes\n--tb=long\n-rA\n-x\n--doctest-modules\n--cov=src\n--cov-report=html\n--cov-report=term-missing:skip-covered\n--no-cov-on-fail\n"
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::UserWarning",
    "ignore::pydantic.warnings.PydanticDeprecatedSince20",
]
markers = [
    "potentially_harmful: mark test as potentially harmful to the system (uninstalls, etc.)",
]
pythonpath = [
    "src",
]
testpaths = [
    "tests",
]

[tool.uv]
default-groups = ["dev"]

[tool.ruff]
cache-dir = ".cache/ruff"
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
]
extend-include = [
    "*.ipynb",
]
line-length = 88
target-version = "py312"

[tool.ruff.format]
docstring-code-format = true
docstring-code-line-length = 88
indent-style = "space"
line-ending = "auto"
quote-style = "double"
skip-magic-trailing-comma = false

[tool.ruff.lint]
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"
fixable = [
    "A",
    "ANN",
    "ARG",
    "B",
    "BLE",
    "C",
    "COM",
    "D",
    "DJ",
    "DTZ",
    "E",
    "EM",
    "ERA",
    "EXE",
    "F",
    "FBT",
    "G",
    "I",
    "ICN",
    "INP",
    "ISC",
    "N",
    "NPY",
    "PD",
    "PGH",
    "PIE",
    "PL",
    "PT",
    "PTH",
    "PYI",
    "Q",
    "RET",
    "RSE",
    "RUF",
    "S",
    "SIM",
    "SLF",
    "T",
    "TCH",
    "TID",
    "TRY",
    "UP",
    "W",
    "YTT",
]
ignore = [
    "COM812",
    "E203",
    "E266",
    "E501",
    "E731",
    "E741",
    "F722",
    "FA102",
    "FBT001",
    "FBT002",
    "FIX002",
    "INP001",
    "ISC001",
    "PGH003",
    "TC002",
    "TD002",
    "TD003",
]
select = [
    "ALL",
]
unfixable = []

[tool.ruff.lint.flake8-quotes]
docstring-quotes = "double"

[tool.ruff.lint.isort]
force-single-line = true
lines-after-imports = 2

[tool.ruff.lint.mccabe]
max-complexity = 10

[tool.ruff.lint.per-file-ignores]
"__init__.py" = [
    "F401",
]

[tool.ruff.lint.pycodestyle]
max-doc-length = 88

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.pylint]
max-args = 5
max-branches = 12
max-locals = 15
max-public-methods = 20
max-returns = 6
max-statements = 50
